--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -122,7 +122,7 @@ ul.icons-ul > li .fa-icon-li {
 /* line 98, ../../../../genweb.theme/genweb/theme/bootstrap/scss/compass_twitter_bootstrap/_font-awesome.scss */
 .fa-icon-border {
   border: solid 1px #eeeeee;
-  padding: .2em .25em .15em;
+  padding: 0.2em 0.25em 0.15em;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
@@ -2068,9 +2068,9 @@ div.token-input-dropdown-facebook {
   width: 400px;
   background-color: #fff;
   overflow: hidden;
-  border-left: 1px solid #ccc;
-  border-right: 1px solid #ccc;
-  border-bottom: 1px solid #ccc;
+  border-left: 1px solid #cccccc;
+  border-right: 1px solid #cccccc;
+  border-bottom: 1px solid #cccccc;
   cursor: default;
   font-size: 13px;
   font-family: Verdana;
@@ -2124,8 +2124,8 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 /* line 5, ../scss/_maxui.scss */
 #maxui-container {
   color: #444444;
-  font: 13px/18px 'Open Sans', serif;
-  text-shadow: 0 1px #FFFFFF;
+  font: 13px/18px "Open Sans", serif;
+  text-shadow: 0 1px white;
   border: 0 none;
   box-shadow: -1px 1px 2px #dddddd;
 }
@@ -2133,7 +2133,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 /* line 12, ../scss/_maxui.scss */
 #maxui-container a {
   color: #007BC0;
-  font-family: 'Open Sans', serif;
+  font-family: "Open Sans", serif;
 }
 
 /* line 16, ../scss/_maxui.scss */
@@ -2156,7 +2156,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 26, ../scss/_maxui.scss */
 #maxui-timeline {
-  background: none repeat scroll 0 0 #FFFFFF;
+  background: none repeat scroll 0 0 white;
   clear: both;
   margin: 0;
   overflow: hidden;
@@ -2165,7 +2165,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 33, ../scss/_maxui.scss */
 #maxui-newactivity {
-  background: none repeat scroll 0 0 #34495E;
+  background: none repeat scroll 0 0 #34495e;
   padding: 10px;
   position: relative;
 }
@@ -2176,7 +2176,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
   border-radius: 3px 3px 3px 3px;
   box-shadow: 0;
   color: #444444;
-  font-family: 'Open Sans', serif;
+  font-family: "Open Sans", serif;
   font-size: 13px;
   height: 48px;
   line-height: 18px;
@@ -2190,7 +2190,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 54, ../scss/_maxui.scss */
 #maxui-search {
-  background: none repeat scroll 0 0 #DEDED6;
+  background: none repeat scroll 0 0 #deded6;
   border-bottom: 0 none;
   border-top: 0 none;
   padding: 10px 30px 10px 10px;
@@ -2199,9 +2199,9 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 /* line 60, ../scss/_maxui.scss */
 #maxui-search-text {
   -moz-appearance: none;
-  border: 1px solid #B2B2B2;
+  border: 1px solid #b2b2b2;
   color: #666666;
-  font-family: 'Open Sans', serif;
+  font-family: "Open Sans", serif;
   font-size: 13px;
   height: 24px;
   line-height: 20px;
@@ -2252,7 +2252,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 102, ../scss/_maxui.scss */
 #maxui-back-conversations, #maxui-show-conversations {
-  background: none repeat scroll 0 0 #F5F5F5;
+  background: none repeat scroll 0 0 whitesmoke;
   border-bottom: 0 none;
   height: 18px;
   padding-bottom: 3px;
@@ -2266,7 +2266,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 112, ../scss/_maxui.scss */
 input.maxui-button {
-  background: none repeat scroll 0 0 #F58D3D;
+  background: none repeat scroll 0 0 #f58d3d;
   border: 0 none;
   border-radius: 4px 4px 4px 4px;
   color: #FFFFFF;
@@ -2289,13 +2289,13 @@ input.maxui-button:hover, input.maxui-button:hover, input.maxui-button:focus, in
 
 /* line 131, ../scss/_maxui.scss */
 input.maxui-button[disabled] {
-  background: none repeat scroll 0 0 #E5E5E5;
+  background: none repeat scroll 0 0 #e5e5e5;
   border: 0;
   border-radius: 4px 4px 4px 4px;
   box-shadow: none;
   color: #666666;
   cursor: default;
-  text-shadow: 0 1px #FFFFFF;
+  text-shadow: 0 1px white;
 }
 
 /* line 140, ../scss/_maxui.scss */
@@ -2305,7 +2305,7 @@ input.maxui-button[disabled] {
 
 /* line 143, ../scss/_maxui.scss */
 #maxui-container textarea:focus, #maxui-container input[type="search"]:focus {
-  border: 1px solid #F58D3D !important;
+  border: 1px solid #f58d3d !important;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05) inset, 0 0 8px rgba(100, 123, 192, 0.5) !important;
 }
 
@@ -2336,14 +2336,14 @@ h1, h2, h3, label {
 
 /* line 36, ../scss/_overrides.scss */
 .liniaDalt, .tileHeadline {
-  border-top: 1px solid #DDDDDD;
+  border-top: 1px solid #dddddd;
   box-shadow: none;
   padding: 10px 0;
 }
 
 /* line 41, ../scss/_overrides.scss */
 .liniaBaix, .documentFirstHeading {
-  border-bottom: 1px solid #DDDDDD;
+  border-bottom: 1px solid #dddddd;
   box-shadow: none;
   margin: 0 0 15px;
   padding: 0 0 5px;
@@ -2543,12 +2543,12 @@ li > a#plone-contentmenu-workflow {
 /* line 26, ../scss/ulearn.scss */
 body {
   background: #eae9e4;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 /* line 31, ../scss/ulearn.scss */
 input, button, select, textarea {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 /* line 34, ../scss/ulearn.scss */
@@ -2653,7 +2653,7 @@ input[type="text"]:focus {
   padding: 5px 10px 10px;
   clear: both;
   margin-bottom: 20px;
-  box-shadow: -1px 1px 2px #ddd;
+  box-shadow: -1px 1px 2px #dddddd;
 }
 
 /* line 121, ../scss/ulearn.scss */
@@ -2690,7 +2690,7 @@ input[type="text"]:focus {
 
 /* line 138, ../scss/ulearn.scss */
 .novetat {
-  background: none repeat scroll 0 0 #34495E;
+  background: none repeat scroll 0 0 #34495e;
 }
 
 /* line 141, ../scss/ulearn.scss */
@@ -2712,7 +2712,7 @@ input[type="text"]:focus {
 
 /* line 153, ../scss/ulearn.scss */
 .nav-pills > li > a {
-  background: none repeat scroll 0 0 #DEDED6;
+  background: none repeat scroll 0 0 #deded6;
   color: #34495E;
   text-decoration: none;
   text-shadow: 1px 1px 0px white;
@@ -2728,7 +2728,7 @@ input[type="text"]:focus {
 /* line 164, ../scss/ulearn.scss */
 .num {
   background: none repeat scroll 0 0 #f58d3d;
-  border-left: 1px solid #eee;
+  border-left: 1px solid #eeeeee;
   border-radius: 0 5px 5px 0;
   color: white;
   float: right;
@@ -2738,7 +2738,7 @@ input[type="text"]:focus {
   margin-top: -8px;
   padding: 7px 5px 5px;
   text-align: center;
-  text-shadow: 1px 1px 0 #92480F;
+  text-shadow: 1px 1px 0 #92480f;
   width: 33px;
 }
 
@@ -2759,7 +2759,7 @@ input[type="text"]:focus {
   padding-bottom: 7px;
   padding-right: 4px;
   width: 60px;
-  transition: all 0.10s ease 0s;
+  transition: all 0.1s ease 0s;
 }
 
 /* line 193, ../scss/ulearn.scss */
@@ -2836,7 +2836,7 @@ input[type="text"]:focus {
   padding-bottom: 7px;
   padding-top: 13px;
   text-align: center;
-  text-shadow: 1px 1px 0 #92480F;
+  text-shadow: 1px 1px 0 #92480f;
   margin-bottom: 0;
 }
 /* line 273, ../scss/ulearn.scss */
@@ -2885,7 +2885,7 @@ input[type="text"]:focus {
 
 /* line 295, ../scss/ulearn.scss */
 #calendari {
-  background: none repeat scroll 0 0 #F5F5F5;
+  background: none repeat scroll 0 0 whitesmoke;
   margin-top: 10px;
   padding: 5px 5px 10px;
   text-shadow: 1px 1px 0 white;
@@ -2897,7 +2897,7 @@ input[type="text"]:focus {
 
 /* line 306, ../scss/ulearn.scss */
 #box_agenda .hiddenStructure {
-  background: none repeat scroll 0 0 #EAE9E4;
+  background: none repeat scroll 0 0 #eae9e4;
   color: black;
   margin-bottom: 5px;
   padding: 1px;
@@ -2911,44 +2911,48 @@ input[type="text"]:focus {
 #box_agenda .newevent a {
   padding: 10px 0;
 }
-/* line 317, ../scss/ulearn.scss */
+/* line 316, ../scss/ulearn.scss */
+#box_agenda .newevent i {
+  margin-right: 3px;
+}
+/* line 318, ../scss/ulearn.scss */
 #box_agenda ul {
   list-style: none;
   margin-left: 25px;
   margin-top: 10px;
 }
-/* line 318, ../scss/ulearn.scss */
+/* line 319, ../scss/ulearn.scss */
 #box_agenda li {
-  border-bottom: 1px solid #EEEEEE;
+  border-bottom: 1px solid #eeeeee;
   font-size: 13px;
   line-height: 15px;
   margin-bottom: 8px;
   padding-bottom: 8px;
 }
-/* line 328, ../scss/ulearn.scss */
+/* line 329, ../scss/ulearn.scss */
 #box_agenda li i {
   color: #34495E;
 }
 
-/* line 332, ../scss/ulearn.scss */
+/* line 333, ../scss/ulearn.scss */
 .weekdays {
   font-size: 11px;
 }
 
-/* line 333, ../scss/ulearn.scss */
+/* line 334, ../scss/ulearn.scss */
 .ploneCalendar {
   width: 100%;
   font-size: 13px;
 }
 
-/* line 334, ../scss/ulearn.scss */
+/* line 335, ../scss/ulearn.scss */
 .event {
   background-color: #384e65;
   text-shadow: none;
   border-right: 1px solid white;
 }
 
-/* line 336, ../scss/ulearn.scss */
+/* line 337, ../scss/ulearn.scss */
 .todayevent {
   background: #f58d3d;
   text-shadow: none;
@@ -2956,18 +2960,18 @@ input[type="text"]:focus {
   border-right: 1px solid white;
 }
 
-/* line 337, ../scss/ulearn.scss */
+/* line 338, ../scss/ulearn.scss */
 .event a {
   color: white;
   font-weight: normal;
 }
 
-/* line 338, ../scss/ulearn.scss */
+/* line 339, ../scss/ulearn.scss */
 .todayevent a {
   color: #fff;
 }
 
-/* line 342, ../scss/ulearn.scss */
+/* line 343, ../scss/ulearn.scss */
 .btn-comunitat {
   color: #FFFFFF;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
@@ -2990,7 +2994,7 @@ input[type="text"]:focus {
   width: 100%;
 }
 
-/* line 367, ../scss/ulearn.scss */
+/* line 368, ../scss/ulearn.scss */
 .btn-comunitat:hover,
 .btn-comunitat:active,
 .btn-comunitat.active,
@@ -3001,7 +3005,7 @@ input[type="text"]:focus {
   *background-color: #003bb3;
 }
 
-/* line 374, ../scss/ulearn.scss */
+/* line 375, ../scss/ulearn.scss */
 #communitylist {
   padding: 10px;
   font-size: 13px;
@@ -3009,102 +3013,107 @@ input[type="text"]:focus {
   text-shadow: 1px 1px 0px white;
   background: #f9f9f9;
 }
-/* line 381, ../scss/ulearn.scss */
+/* line 382, ../scss/ulearn.scss */
 #communitylist .eines {
   color: #34495E;
   font-size: 18px;
   text-decoration: none;
 }
-/* line 387, ../scss/ulearn.scss */
+/* line 388, ../scss/ulearn.scss */
 #communitylist ul {
   margin-left: 0;
   list-style: none;
 }
-/* line 392, ../scss/ulearn.scss */
+/* line 393, ../scss/ulearn.scss */
 #communitylist li {
   min-height: 55px;
   line-height: 20px;
-  border-bottom: 1px solid #DDDDDD;
+  border-bottom: 1px solid #dddddd;
   margin-bottom: 0;
   padding-bottom: 15px;
   padding-left: 10px;
   padding-top: 10px;
-  background: none repeat scroll 0 0 #FFFFFF;
+  background: none repeat scroll 0 0 white;
   box-shadow: none;
 }
-/* line 404, ../scss/ulearn.scss */
+/* line 405, ../scss/ulearn.scss */
 #communitylist a {
   color: #555;
   text-decoration: none;
 }
-/* line 408, ../scss/ulearn.scss */
+/* line 409, ../scss/ulearn.scss */
 #communitylist a h4 {
   color: #F58D3D;
   font-size: 16px;
   margin-bottom: 0;
   margin-top: 0;
 }
-/* line 414, ../scss/ulearn.scss */
+/* line 415, ../scss/ulearn.scss */
 #communitylist a h4:hover {
   opacity: 0.8;
 }
-/* line 418, ../scss/ulearn.scss */
+/* line 419, ../scss/ulearn.scss */
 #communitylist img {
   margin-top: 3px;
   border: 2px solid white;
   max-width: 54px;
 }
-/* line 423, ../scss/ulearn.scss */
+/* line 424, ../scss/ulearn.scss */
 #communitylist img:hover {
   transition: all 0.25s ease 0s;
-  border: 2px solid #F58D3D;
+  border: 2px solid #f58d3d;
 }
 
-/* line 429, ../scss/ulearn.scss */
+/* line 430, ../scss/ulearn.scss */
 .icon-ulearn-community, .icon-ulearn.community {
   background-position: -312px -192px;
 }
 
-/* line 431, ../scss/ulearn.scss */
+/* line 432, ../scss/ulearn.scss */
 #listing-table a.contenttype-ulearn-community:before,
 .template-folder_tabular_view .listing a.contenttype-ulearn-community:before {
   background-position: -312px -192px;
 }
 
-/* line 435, ../scss/ulearn.scss */
+/* line 436, ../scss/ulearn.scss */
 #box_perfil .span9 {
   overflow-y: hidden;
   height: 150px;
 }
 
-/* line 436, ../scss/ulearn.scss */
+/* line 437, ../scss/ulearn.scss */
 #box_community img {
   width: 200px;
 }
 
-/* line 437, ../scss/ulearn.scss */
+/* line 438, ../scss/ulearn.scss */
+#box_community i {
+  margin-right: 3px;
+}
+
+/* line 439, ../scss/ulearn.scss */
 #box_community p {
   margin-top: 10px;
 }
 
-/* line 439, ../scss/ulearn.scss */
+/* line 441, ../scss/ulearn.scss */
 .template-communities #content {
   background-color: white;
 }
 
-/* line 440, ../scss/ulearn.scss */
+/* line 442, ../scss/ulearn.scss */
 .template-communities h1 {
   margin: 0 0 20px 20px;
   padding-top: 20px;
 }
 
-/* line 441, ../scss/ulearn.scss */
+/* line 443, ../scss/ulearn.scss */
 #searchcommunities {
   margin-right: auto;
   margin-left: auto;
   width: 300px;
 }
-/* line 446, ../scss/ulearn.scss */
+/* line 448, ../scss/ulearn.scss */
 #searchcommunities .searchInput {
   height: 25px;
   font-size: 20px;
@@ -3112,82 +3121,100 @@ input[type="text"]:focus {
   width: inherit;
 }
 
-/* line 455, ../scss/ulearn.scss */
+/* line 457, ../scss/ulearn.scss */
 #box_comunitats .bubble-content {
   padding: 6px 0px;
   width: 40px;
   text-align: center;
   background: none repeat scroll 0 0 #f58d3d;
 }
-/* line 462, ../scss/ulearn.scss */
+/* line 464, ../scss/ulearn.scss */
 #box_comunitats .bubble a {
   color: white;
   font-weight: 600;
   height: 18px;
   width: 33px;
 }
-/* line 470, ../scss/ulearn.scss */
+/* line 472, ../scss/ulearn.scss */
 #box_comunitats .bubble .arrow {
   border-right-color: #f58d3d;
 }
-/* line 473, ../scss/ulearn.scss */
+/* line 475, ../scss/ulearn.scss */
+#box_comunitats i {
+  margin-right: 3px;
+}
+/* line 477, ../scss/ulearn.scss */
 #box_comunitats li a {
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
   border-radius: 0px;
 }
 
-/* line 476, ../scss/ulearn.scss */
+/* line 480, ../scss/ulearn.scss */
 .bubble.top .arrow:after {
   border-top-color: transparent;
 }
 
-/* line 477, ../scss/ulearn.scss */
+/* line 481, ../scss/ulearn.scss */
 .bubble.right .arrow:after {
   border-right-color: transparent;
 }
 
-/* line 478, ../scss/ulearn.scss */
+/* line 482, ../scss/ulearn.scss */
 .bubble.left .arrow:after {
   border-left-color: transparent;
 }
 
-/* line 481, ../scss/ulearn.scss */
+/* line 485, ../scss/ulearn.scss */
 #box_stats .bubble-content {
   padding: 5px 12px;
   text-align: center;
 }
-/* line 482, ../scss/ulearn.scss */
+/* line 486, ../scss/ulearn.scss */
 #box_stats .bubble {
   background-color: #344961;
   color: white;
   width: 60px;
 }
-/* line 486, ../scss/ulearn.scss */
+/* line 490, ../scss/ulearn.scss */
 #box_stats .bubble .arrow {
   border-left-color: #344961;
 }
-/* line 488, ../scss/ulearn.scss */
+/* line 492, ../scss/ulearn.scss */
 #box_stats p {
   margin: 0;
   padding: 5px 0 5px 78px;
   background-color: #deded6;
   font-weight: bold;
 }
-/* line 494, ../scss/ulearn.scss */
+/* line 498, ../scss/ulearn.scss */
 #box_stats ul {
   margin-top: 5px;
 }
-/* line 495, ../scss/ulearn.scss */
+/* line 499, ../scss/ulearn.scss */
 #box_stats li {
   margin-bottom: 5px;
 }
 
-/* line 501, ../scss/ulearn.scss */
+/* line 505, ../scss/ulearn.scss */
 #addModal .modal-body {
   max-height: 426px;
 }
-/* line 502, ../scss/ulearn.scss */
+/* line 506, ../scss/ulearn.scss */
 #addModal #content-core {
   height: 426px;
+}
+
+/* line 510, ../scss/ulearn.scss */
+.template-profile #content {
+  background-color: white;
+  padding: 10px 20px;
+}
+/* line 515, ../scss/ulearn.scss */
+.template-profile .portrait {
+  width: 163px;
+}
+/* line 517, ../scss/ulearn.scss */
+.template-profile .badges {
+  margin-top: 5px;
 }
