--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -5,6 +5,7 @@ $fontAwesomePath: "/++genweb++static/fonts";
 @import "overrides";
 @import "hidden";
 @import "arrows";
+@import "login";
 // @import "genwebupc";
 
 // Victor for pushing it to genweb.theme
@@ -68,10 +69,12 @@ a:hover, a:active {
 }
 
 .masthead {
-  // background-color: #f58d3d;
   margin-bottom: 0;
-  padding: 15px 20px;
-  // box-shadow:0 1px 3px rgba(0, 0, 0, 0.1) inset, 0 0 0 #DDDDDD;
+  // padding: 15px 20px;
+  h1 {
+    margin: 0;
+  }
+  #eines {margin-top: 25px;}
 }
 
 .dropdown-menu a {
