--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -519,3 +519,10 @@ border-color: #34495E;
 
   .badges { margin-top: 5px; }
 }
+
+// OJO! si canviem el nom de la seccio d'esdeveniments ha de canviar
+.subsection-esdeveniments,
+.subsection-eventos,
+.subsection-events {
+  #menusup {max-width: 726px;}
+}
