My communities view

--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -386,6 +386,8 @@ border-color: #34495E;
         color: #34495E;
         font-size: 18px;
         text-decoration: none;
+
+        i {padding-right: 2px}
     }
 
     ul {
