--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -449,6 +449,7 @@ border-color: #34495E;
   margin-right: auto;
   margin-left: auto;
   width: 300px;
+  padding-top: 10px;
 
   .searchInput {
     height: 25px;
