--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -128,7 +128,7 @@ a [class*=" fa-icon-"] {
 /* line 102, ../../../../genweb.theme/genweb/theme/bootstrap/scss/compass_twitter_bootstrap/_font-awesome.scss */
 .fa-icon-border {
   border: solid 1px #eeeeee;
-  padding: .2em .25em .15em;
+  padding: 0.2em 0.25em 0.15em;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
@@ -2405,9 +2405,9 @@ div.token-input-dropdown-facebook {
   width: 400px;
   background-color: #fff;
   overflow: hidden;
-  border-left: 1px solid #ccc;
-  border-right: 1px solid #ccc;
-  border-bottom: 1px solid #ccc;
+  border-left: 1px solid #cccccc;
+  border-right: 1px solid #cccccc;
+  border-bottom: 1px solid #cccccc;
   cursor: default;
   font-size: 13px;
   font-family: Verdana;
@@ -2461,8 +2461,8 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 /* line 5, ../scss/_maxui.scss */
 #maxui-container {
   color: #444444;
-  font: 13px/18px 'Open Sans', serif;
-  text-shadow: 0 1px #FFFFFF;
+  font: 13px/18px "Open Sans", serif;
+  text-shadow: 0 1px white;
   border: 0 none;
   box-shadow: -1px 1px 2px #dddddd;
 }
@@ -2470,7 +2470,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 /* line 12, ../scss/_maxui.scss */
 #maxui-container a {
   color: #007BC0;
-  font-family: 'Open Sans', serif;
+  font-family: "Open Sans", serif;
 }
 
 /* line 16, ../scss/_maxui.scss */
@@ -2493,7 +2493,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 26, ../scss/_maxui.scss */
 #maxui-timeline {
-  background: none repeat scroll 0 0 #FFFFFF;
+  background: none repeat scroll 0 0 white;
   clear: both;
   margin: 0;
   overflow: hidden;
@@ -2502,7 +2502,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 33, ../scss/_maxui.scss */
 #maxui-newactivity {
-  background: none repeat scroll 0 0 #34495E;
+  background: none repeat scroll 0 0 #34495e;
   padding: 10px;
   position: relative;
 }
@@ -2513,7 +2513,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
   border-radius: 3px 3px 3px 3px;
   box-shadow: 0;
   color: #444444;
-  font-family: 'Open Sans', serif;
+  font-family: "Open Sans", serif;
   font-size: 13px;
   height: 48px;
   line-height: 18px;
@@ -2527,7 +2527,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 54, ../scss/_maxui.scss */
 #maxui-search {
-  background: none repeat scroll 0 0 #DEDED6;
+  background: none repeat scroll 0 0 #deded6;
   border-bottom: 0 none;
   border-top: 0 none;
   padding: 10px 30px 10px 10px;
@@ -2536,9 +2536,9 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 /* line 60, ../scss/_maxui.scss */
 #maxui-search-text {
   -moz-appearance: none;
-  border: 1px solid #B2B2B2;
+  border: 1px solid #b2b2b2;
   color: #666666;
-  font-family: 'Open Sans', serif;
+  font-family: "Open Sans", serif;
   font-size: 13px;
   height: 24px;
   line-height: 20px;
@@ -2589,7 +2589,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 102, ../scss/_maxui.scss */
 #maxui-back-conversations, #maxui-show-conversations {
-  background: none repeat scroll 0 0 #F5F5F5;
+  background: none repeat scroll 0 0 whitesmoke;
   border-bottom: 0 none;
   height: 18px;
   padding-bottom: 3px;
@@ -2603,7 +2603,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 112, ../scss/_maxui.scss */
 input.maxui-button {
-  background: none repeat scroll 0 0 #F58D3D;
+  background: none repeat scroll 0 0 #f58d3d;
   border: 0 none;
   border-radius: 4px 4px 4px 4px;
   color: #FFFFFF;
@@ -2626,13 +2626,13 @@ input.maxui-button:hover, input.maxui-button:hover, input.maxui-button:focus, in
 
 /* line 131, ../scss/_maxui.scss */
 input.maxui-button[disabled] {
-  background: none repeat scroll 0 0 #E5E5E5;
+  background: none repeat scroll 0 0 #e5e5e5;
   border: 0;
   border-radius: 4px 4px 4px 4px;
   box-shadow: none;
   color: #666666;
   cursor: default;
-  text-shadow: 0 1px #FFFFFF;
+  text-shadow: 0 1px white;
 }
 
 /* line 140, ../scss/_maxui.scss */
@@ -2642,7 +2642,7 @@ input.maxui-button[disabled] {
 
 /* line 143, ../scss/_maxui.scss */
 #maxui-container textarea:focus, #maxui-container input[type="search"]:focus {
-  border: 1px solid #F58D3D !important;
+  border: 1px solid #f58d3d !important;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05) inset, 0 0 8px rgba(100, 123, 192, 0.5) !important;
 }
 
@@ -2673,14 +2673,14 @@ h1, h2, h3, label {
 
 /* line 36, ../scss/_overrides.scss */
 .liniaDalt, .tileHeadline {
-  border-top: 1px solid #DDDDDD;
+  border-top: 1px solid #dddddd;
   box-shadow: none;
   padding: 10px 0;
 }
 
 /* line 41, ../scss/_overrides.scss */
 .liniaBaix, .documentFirstHeading {
-  border-bottom: 1px solid #DDDDDD;
+  border-bottom: 1px solid #dddddd;
   box-shadow: none;
   margin: 0 0 15px;
   padding: 0 0 5px;
@@ -2923,9 +2923,9 @@ li > a#plone-contentmenu-workflow {
   border-radius: 4px;
   opacity: 0.96;
   filter: alpha(opacity=96);
-  border-bottom: 1px solid #CCCCCC;
-  border-left: 1px solid #EEEEEE;
-  border-right: 1px solid #EEEEEE;
+  border-bottom: 1px solid #cccccc;
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
   padding: 20px;
 }
 
@@ -2938,12 +2938,12 @@ li > a#plone-contentmenu-workflow {
 /* line 27, ../scss/ulearn.scss */
 body {
   background: #eae9e4;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 /* line 32, ../scss/ulearn.scss */
 input, button, select, textarea {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 /* line 35, ../scss/ulearn.scss */
@@ -3055,7 +3055,7 @@ input[type="text"]:focus {
   padding: 5px 10px 10px;
   clear: both;
   margin-bottom: 20px;
-  box-shadow: -1px 1px 2px #ddd;
+  box-shadow: -1px 1px 2px #dddddd;
 }
 
 /* line 124, ../scss/ulearn.scss */
@@ -3092,7 +3092,7 @@ input[type="text"]:focus {
 
 /* line 141, ../scss/ulearn.scss */
 .novetat {
-  background: none repeat scroll 0 0 #34495E;
+  background: none repeat scroll 0 0 #34495e;
 }
 
 /* line 144, ../scss/ulearn.scss */
@@ -3114,7 +3114,7 @@ input[type="text"]:focus {
 
 /* line 156, ../scss/ulearn.scss */
 .nav-pills > li > a {
-  background: none repeat scroll 0 0 #DEDED6;
+  background: none repeat scroll 0 0 #deded6;
   color: #34495E;
   text-decoration: none;
   text-shadow: 1px 1px 0px white;
@@ -3130,7 +3130,7 @@ input[type="text"]:focus {
 /* line 167, ../scss/ulearn.scss */
 .num {
   background: none repeat scroll 0 0 #f58d3d;
-  border-left: 1px solid #eee;
+  border-left: 1px solid #eeeeee;
   border-radius: 0 5px 5px 0;
   color: white;
   float: right;
@@ -3140,7 +3140,7 @@ input[type="text"]:focus {
   margin-top: -8px;
   padding: 7px 5px 5px;
   text-align: center;
-  text-shadow: 1px 1px 0 #92480F;
+  text-shadow: 1px 1px 0 #92480f;
   width: 33px;
 }
 
@@ -3161,7 +3161,7 @@ input[type="text"]:focus {
   padding-bottom: 7px;
   padding-right: 4px;
   width: 60px;
-  transition: all 0.10s ease 0s;
+  transition: all 0.1s ease 0s;
 }
 
 /* line 196, ../scss/ulearn.scss */
@@ -3238,7 +3238,7 @@ input[type="text"]:focus {
   padding-bottom: 7px;
   padding-top: 13px;
   text-align: center;
-  text-shadow: 1px 1px 0 #92480F;
+  text-shadow: 1px 1px 0 #92480f;
   margin-bottom: 0;
 }
 /* line 276, ../scss/ulearn.scss */
@@ -3287,7 +3287,7 @@ input[type="text"]:focus {
 
 /* line 298, ../scss/ulearn.scss */
 #calendari {
-  background: none repeat scroll 0 0 #F5F5F5;
+  background: none repeat scroll 0 0 whitesmoke;
   margin-top: 10px;
   padding: 5px 5px 10px;
   text-shadow: 1px 1px 0 white;
@@ -3299,7 +3299,7 @@ input[type="text"]:focus {
 
 /* line 309, ../scss/ulearn.scss */
 #box_agenda .hiddenStructure {
-  background: none repeat scroll 0 0 #EAE9E4;
+  background: none repeat scroll 0 0 #eae9e4;
   color: black;
   margin-bottom: 5px;
   padding: 1px;
@@ -3325,7 +3325,7 @@ input[type="text"]:focus {
 }
 /* line 322, ../scss/ulearn.scss */
 #box_agenda li {
-  border-bottom: 1px solid #EEEEEE;
+  border-bottom: 1px solid #eeeeee;
   font-size: 13px;
   line-height: 15px;
   margin-bottom: 8px;
@@ -3434,12 +3434,12 @@ input[type="text"]:focus {
 #communitylist li {
   min-height: 55px;
   line-height: 20px;
-  border-bottom: 1px solid #DDDDDD;
+  border-bottom: 1px solid #dddddd;
   margin-bottom: 0;
   padding-bottom: 15px;
   padding-left: 10px;
   padding-top: 10px;
-  background: none repeat scroll 0 0 #FFFFFF;
+  background: none repeat scroll 0 0 white;
   box-shadow: none;
 }
 /* line 410, ../scss/ulearn.scss */
@@ -3467,7 +3467,7 @@ input[type="text"]:focus {
 /* line 429, ../scss/ulearn.scss */
 #communitylist img:hover {
   transition: all 0.25s ease 0s;
-  border: 2px solid #F58D3D;
+  border: 2px solid #f58d3d;
 }
 
 /* line 435, ../scss/ulearn.scss */
@@ -3518,8 +3518,9 @@ input[type="text"]:focus {
   margin-right: auto;
   margin-left: auto;
   width: 300px;
+  padding-top: 10px;
 }
-/* line 453, ../scss/ulearn.scss */
+/* line 454, ../scss/ulearn.scss */
 #searchcommunities .searchInput {
   height: 25px;
   font-size: 20px;
@@ -3527,105 +3528,105 @@ input[type="text"]:focus {
   width: inherit;
 }
 
-/* line 462, ../scss/ulearn.scss */
+/* line 463, ../scss/ulearn.scss */
 #box_comunitats .bubble-content {
   padding: 6px 0px;
   width: 40px;
   text-align: center;
   background: none repeat scroll 0 0 #f58d3d;
 }
-/* line 469, ../scss/ulearn.scss */
+/* line 470, ../scss/ulearn.scss */
 #box_comunitats .bubble a {
   color: white;
   font-weight: 600;
   height: 18px;
   width: 33px;
 }
-/* line 477, ../scss/ulearn.scss */
+/* line 478, ../scss/ulearn.scss */
 #box_comunitats .bubble .arrow {
   border-right-color: #f58d3d;
 }
-/* line 480, ../scss/ulearn.scss */
+/* line 481, ../scss/ulearn.scss */
 #box_comunitats i {
   margin-right: 3px;
 }
-/* line 482, ../scss/ulearn.scss */
+/* line 483, ../scss/ulearn.scss */
 #box_comunitats li a {
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
   border-radius: 0px;
 }
 
-/* line 485, ../scss/ulearn.scss */
+/* line 486, ../scss/ulearn.scss */
 .bubble.top .arrow:after {
   border-top-color: transparent;
 }
 
-/* line 486, ../scss/ulearn.scss */
+/* line 487, ../scss/ulearn.scss */
 .bubble.right .arrow:after {
   border-right-color: transparent;
 }
 
-/* line 487, ../scss/ulearn.scss */
+/* line 488, ../scss/ulearn.scss */
 .bubble.left .arrow:after {
   border-left-color: transparent;
 }
 
-/* line 490, ../scss/ulearn.scss */
+/* line 491, ../scss/ulearn.scss */
 #box_stats .bubble-content {
   padding: 5px 12px;
   text-align: center;
 }
-/* line 491, ../scss/ulearn.scss */
+/* line 492, ../scss/ulearn.scss */
 #box_stats .bubble {
   background-color: #344961;
   color: white;
   width: 60px;
 }
-/* line 495, ../scss/ulearn.scss */
+/* line 496, ../scss/ulearn.scss */
 #box_stats .bubble .arrow {
   border-left-color: #344961;
 }
-/* line 497, ../scss/ulearn.scss */
+/* line 498, ../scss/ulearn.scss */
 #box_stats p {
   margin: 0;
   padding: 5px 0 5px 78px;
   background-color: #deded6;
   font-weight: bold;
 }
-/* line 503, ../scss/ulearn.scss */
+/* line 504, ../scss/ulearn.scss */
 #box_stats ul {
   margin-top: 5px;
 }
-/* line 504, ../scss/ulearn.scss */
+/* line 505, ../scss/ulearn.scss */
 #box_stats li {
   margin-bottom: 5px;
 }
 
-/* line 510, ../scss/ulearn.scss */
+/* line 511, ../scss/ulearn.scss */
 #addModal .modal-body {
   max-height: 426px;
 }
-/* line 511, ../scss/ulearn.scss */
+/* line 512, ../scss/ulearn.scss */
 #addModal #content-core {
   height: 426px;
 }
 
-/* line 515, ../scss/ulearn.scss */
+/* line 516, ../scss/ulearn.scss */
 .template-profile #content {
   background-color: white;
   padding: 10px 20px;
 }
-/* line 520, ../scss/ulearn.scss */
+/* line 521, ../scss/ulearn.scss */
 .template-profile .portrait {
   width: 163px;
 }
-/* line 522, ../scss/ulearn.scss */
+/* line 523, ../scss/ulearn.scss */
 .template-profile .badges {
   margin-top: 5px;
 }
 
-/* line 529, ../scss/ulearn.scss */
+/* line 530, ../scss/ulearn.scss */
 .subsection-esdeveniments #menusup,
 .subsection-eventos #menusup,
 .subsection-events #menusup {
