--- a/ulearn/theme/scss/_hidden.scss
+++ b/ulearn/theme/scss/_hidden.scss
@@ -3,3 +3,4 @@
 
 // Amagar estats
 li > a#plone-contentmenu-workflow {display: none}
+.section-Members li > a#plone-contentmenu-workflow {display: block;}
