--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -455,7 +455,17 @@ border-color: #34495E;
     height: 25px;
     font-size: 20px;
     line-height: 25px;
-    width: inherit;
+    width: 260px;
+  }
+
+  .add-on {
+    background-color: white;
+    border: none;
+    font-size: 20px;
+    position: relative;
+    right: 34px;
+    top: 2px;
+    z-index: 10;
   }
 }
 
